# validaCpfPytest

./: .gitignore  README.md  pyproject.toml  testValidaCpf.py  test_ValidaCpf.py  validaCpf.py
